dark: fix navbar z-index in mobile

--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -256,7 +256,7 @@
   height: 100vh;
   width: 18rem;
   opacity: 0;
-  z-index: 99;
+  z-index: 1001;
 
   *:not(span) {
     @extend .items-configs;
